// ===== PROTOBUF CONFIGURATION ===== //
// Specifies the Protocol Buffers syntax version (proto3 is the latest)
syntax = "proto3";

// Defines the C# namespace for the generated classes (used in gRPC clients/servers)
option csharp_namespace = "gRPC_Demo.Protos";

// Imports Google's well-known Timestamp type for handling date/time
import "google/protobuf/timestamp.proto";


// ===== MESSAGE DEFINITIONS ===== //

// TrackingMessage: Represents a tracking update from a GPS-enabled device
message TrackingMessage {
    // Unique identifier for the device (field tag 1, required for binary encoding)
    int32 deviceId = 1;

    // Current speed in arbitrary units (e.g., km/h) (field tag 2)
    int32 speed = 2;

    // Nested Location object (field tag 3)
    Location location = 3;

    // Timestamp of the recorded data (uses Google's Timestamp proto) (field tag 4)
    google.protobuf.Timestamp stamp = 4;
}

// Location: Geographic coordinates (latitude/longitude)
message Location {
    // Latitude in decimal degrees (field tag 1)
    double Lat = 1;

    // Longitude in decimal degrees (field tag 2)
    double Long = 2;
}

// TrackingResponse: Acknowledgment message for gRPC service responses
message TrackingResponse {
    // Indicates if the operation (e.g., storing tracking data) succeeded (field tag 1)
    bool success = 1;
}